--- a/Mars-Accident/Mars-Accident.vcxproj
+++ b/Mars-Accident/Mars-Accident.vcxproj
@@ -156,17 +156,19 @@
     <ClCompile Include="Enemy\EnemyLeft.cpp" />
     <ClCompile Include="Enemy\EnemyRight.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Scene\KeyConfigScene.cpp" />
     <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Scene\GameOverScene.cpp" />
     <ClCompile Include="Scene\GamePlayingScene.cpp" />
-    <ClCompile Include="Scene\KeyConfingScene.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Scene\PauseScene.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
+    <ClCompile Include="Shot\ShotBase.cpp" />
+    <ClCompile Include="Shot\ShotBeam.cpp" />
     <ClCompile Include="StringUtility.cpp" />
     <ClCompile Include="UFO.cpp" />
     <ClCompile Include="Vec2.cpp" />
@@ -178,16 +180,18 @@
     <ClInclude Include="Enemy\EnemyRight.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Scene\KeyConfigScene.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Scene\GameOverScene.h" />
     <ClInclude Include="Scene\GamePlayingScene.h" />
-    <ClInclude Include="Scene\KeyConfingScene.h" />
     <ClInclude Include="Scene\PauseScene.h" />
     <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\TitleScene.h" />
+    <ClInclude Include="Shot\ShotBase.h" />
+    <ClInclude Include="Shot\ShotBeam.h" />
     <ClInclude Include="StringUtility.h" />
     <ClInclude Include="UFO.h" />
     <ClInclude Include="Vec2.h" />
