--- a/MarsAccident/MarsAccident.vcxproj
+++ b/MarsAccident/MarsAccident.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Enemy\EnemyBase.cpp" />
     <ClCompile Include="Enemy\EnemyLeft.cpp" />
     <ClCompile Include="Enemy\EnemyRight.cpp" />
+    <ClCompile Include="Scene\GameOverScene.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Pad.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="Enemy\EnemyLeft.h" />
     <ClInclude Include="Enemy\EnemyRight.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Scene\GameOverScene.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Player.h" />
