--- a/MarsAccident/MarsAccident.vcxproj.filters
+++ b/MarsAccident/MarsAccident.vcxproj.filters
@@ -13,23 +13,11 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="ヘッダー ファイル\Scene">
-      <UniqueIdentifier>{6ef330e2-aa09-47b7-96d4-cbe7f160f6d2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\enemy">
-      <UniqueIdentifier>{cef90f93-a7c7-4e1a-a18b-25c460d45a40}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\Enemy">
-      <UniqueIdentifier>{ca59a5a0-ca3b-4e88-8f6b-f5bd464231a9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\Scene">
+    <Filter Include="Scene">
       <UniqueIdentifier>{df7acde4-8020-4969-bf41-06a27b0fefef}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Stage">
-      <UniqueIdentifier>{25f08833-aa76-4abc-bb93-9004078513b9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\Stage">
-      <UniqueIdentifier>{50f9fc6a-a6fa-48ba-bda6-57961c67d5f2}</UniqueIdentifier>
+    <Filter Include="Enemy">
+      <UniqueIdentifier>{ca59a5a0-ca3b-4e88-8f6b-f5bd464231a9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -64,46 +52,28 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Scene\TitleScene.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Scene\SceneManager.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Scene\SceneMain.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Scene\Scene.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Enemy\EnemyBase.cpp">
-      <Filter>ソース ファイル\Enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Enemy\EnemyLeft.cpp">
-      <Filter>ソース ファイル\Enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Enemy\EnemyRight.cpp">
-      <Filter>ソース ファイル\Enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Scene\GameOverScene.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Scene\GameClearScene.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Stage\Stage2.cpp">
-      <Filter>ソース ファイル\Stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Stage\Stage3.cpp">
-      <Filter>ソース ファイル\Stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Stage\Stage1.cpp">
-      <Filter>ソース ファイル\Stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Stage\StageBase.cpp">
-      <Filter>ソース ファイル\Stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Stage\StageManager.cpp">
-      <Filter>ソース ファイル\Stage</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -137,47 +107,29 @@
     <ClInclude Include="Input.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\GameOverScene.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene\Scene.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene\SceneMain.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
+    <ClInclude Include="Scene\TitleScene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Scene\SceneManager.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
+      <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\TitleScene.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
+    <ClInclude Include="Scene\SceneMain.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\Scene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\EnemyBase.h">
-      <Filter>ヘッダー ファイル\enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\EnemyLeft.h">
-      <Filter>ヘッダー ファイル\enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\EnemyRight.h">
-      <Filter>ヘッダー ファイル\enemy</Filter>
+      <Filter>Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\GameClearScene.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Stage\Stage2.h">
-      <Filter>ヘッダー ファイル\Stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Stage\Stage3.h">
-      <Filter>ヘッダー ファイル\Stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Stage\Stage1.h">
-      <Filter>ヘッダー ファイル\Stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Stage\StageBase.h">
-      <Filter>ヘッダー ファイル\Stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Stage\StageManager.h">
-      <Filter>ヘッダー ファイル\Stage</Filter>
+    <ClInclude Include="Scene\GameOverScene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
