--- a/MarsAccident/MarsAccident.vcxproj
+++ b/MarsAccident/MarsAccident.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Enemy\EnemyBase.cpp" />
     <ClCompile Include="Enemy\EnemyLeft.cpp" />
     <ClCompile Include="Enemy\EnemyRight.cpp" />
+    <ClCompile Include="Scene\GameClearScene.cpp" />
     <ClCompile Include="Scene\GameOverScene.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="ShotBeam.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
+    <ClCompile Include="Scene\Stage2Scene.cpp" />
     <ClCompile Include="UFO.cpp" />
     <ClCompile Include="Vec2.cpp" />
   </ItemGroup>
@@ -176,6 +178,7 @@
     <ClInclude Include="Enemy\EnemyLeft.h" />
     <ClInclude Include="Enemy\EnemyRight.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Scene\GameClearScene.h" />
     <ClInclude Include="Scene\GameOverScene.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Pad.h" />
@@ -187,6 +190,7 @@
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="ShotBeam.h" />
     <ClInclude Include="Scene\TitleScene.h" />
+    <ClInclude Include="Scene\Stage2Scene.h" />
     <ClInclude Include="UFO.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
