--- a/MarsAccident.vcxproj.filters
+++ b/MarsAccident.vcxproj.filters
@@ -87,10 +87,7 @@
     <ClCompile Include="Scene\Stage2Scene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Animation.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="graphic.cpp">
+    <ClCompile Include="S2UFO.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -155,10 +152,7 @@
     <ClInclude Include="Scene\Stage2Scene.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Animation.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="graphic.h">
+    <ClInclude Include="S2UFO.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
