--- a/MarsAccident.vcxproj.filters
+++ b/MarsAccident.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="S2UFO.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\TutorialScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Rect.h">
@@ -154,6 +157,9 @@
     </ClInclude>
     <ClInclude Include="S2UFO.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\TutorialScene.h">
+      <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
